# libvideo

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  _clang-format  conanfile.py
.ci/: prebuild_thirdparty.py
.ci/conan_profiles/: conan_profile_linux_debug  conan_profile_linux_release
.ci/conan_profiles/Android/Debug/: host_android_arm64-v8a_debug  host_android_armeabi-v7a_debug  host_android_x86_64_debug  host_android_x86_debug
.ci/conan_profiles/Android/Release/: host_android_arm64-v8a_release  host_android_armeabi-v7a_release  host_android_x86_64_release  host_android_x86_release
.ci/ffmpeg_conan_recipe/: conandata.yml  conanfile.py
.ci/libx264_conan_recipe/: conandata.yml  conanfile.py
.github/workflows/: pull_request.yml  release.yml
Include/: DecoderParams.h  EncoderParams.h  FilterParams.h  GeneralUtilities.h  IDecoder.h  IEncoder.h  libvideo.h
libvideo-android/: .gitignore  CMakeLists.txt  conanfile.py  settings.gradle
libvideo-android/HWDecodeCameraTest/: build.gradle
libvideo-android/HWDecodeCameraTest/src/main/: AndroidManifest.xml
libvideo-android/HWDecodeCameraTest/src/main/java/com/tomsksoft/cameratest/: LibvideoHWDecodeTest.java
libvideo-android/HWDecodeCameraTest/src/main/res/layout/: activity_main.xml
libvideo-android/HWDecodeCameraTest/src/main/res/values/: strings.xml
libvideo-android/HWDecodeCameraTest/src/main/res/values-night/: themes.xml
libvideo-android/SWEncodeDecodeCameraTest/: build.gradle
libvideo-android/SWEncodeDecodeCameraTest/src/main/: AndroidManifest.xml
libvideo-android/SWEncodeDecodeCameraTest/src/main/java/com/tomsksoft/cameratest/: LibvideoSWTest.java
libvideo-android/SWEncodeDecodeCameraTest/src/main/res/layout/: activity_main.xml
libvideo-android/SWEncodeDecodeCameraTest/src/main/res/values/: strings.xml  themes.xml
libvideo-android/gradle/wrapper/: gradle-wrapper.properties
libvideo-android/libvideo/: build.gradle
libvideo-android/libvideo/.ci/: build_debug  build_release
libvideo-android/libvideo/.ci/Debug/: host_android_x86_64_debug
libvideo-android/libvideo/.ci/Release/: host_android_armeabi-v7a_release
libvideo-android/libvideo/src/main/: AndroidManifest.xml
libvideo-android/libvideo/src/main/java/com/tomsksoft/libvideo/: DecoderParamsJ.java  EncoderParamsJ.java  HWDecoderJ.java  LibvideoH264Preset.java  SWDecoderJ.java  SWEncoderJ.java  Utilities.java
libvideo-android/libvideo/src/main/libvideo_cpp/: native-libvideo.cpp
src/: AndroidHWDecoder.cpp  AndroidHWDecoder.h  GeneralUtilities.cpp  Logs.cpp  Logs.h  SWDecoder.cpp  SWDecoder.h  SWEncoder.cpp  SWEncoder.h  WinHWDecoder.cpp  WinHWDecoder.h  WinHWEncoder.cpp  WinHWEncoder.h  libvideo.cpp
src/Filters/: CropFilter.cpp  CropFilter.h  IFilter.h  ScaleFilter.cpp  ScaleFilter.h
src/FormatConvertors/: RGBAtoYUV.cpp  RGBAtoYUV.h  YUVtoNV12.cpp  YUVtoNV12.h  YUVtoRGBA.cpp  YUVtoRGBA.h
src/Shaders/: PixelShader.hlsl  VertexShader.hlsl
src/WindowsManager/: WindowOutputManagerHW.cpp  WindowOutputManagerHW.h  WindowOutputManagerSW.cpp  WindowOutputManagerSW.h
test_package/: CMakeLists.txt  LibvideoExample.cpp  TestLibVideo.cpp  TestLibVideoFilter.cpp  TestWindow.cpp  TestWindow.h  conanfile.py
